<resources>
    <string name="app_name">CalorieCounter</string>

    <string name="label_loading">Loading...</string>

    <string name="label_my_profile">My Profile</string>
    <string name="label_udpate_my_profile">Update My Profile</string>
    <string name="label_name_owner">Your Name: </string>
    <string name="label_dob_owner">Date of birth: </string>
    <string name="label_height_owner">Height: </string>
    <string name="label_weight_owner">Weight: </string>

    <string name="hint_name_owner">Enter User Name</string>
    <string name="hint_dob_owner">Enter D.O.B (YYYY/MM/DD)</string>
    <string name="hint_height_owner">Enter User Height</string>
    <string name="hint_weight_owner">Enter User Weight</string>

    <string name="label_height_unit">(cm)</string>
    <string name="label_weight_unit">(kg)</string>

    <string name="label_choose_pet">Choose your pet </string>
    <string name="label_name_pet">Pet\'s Name: </string>

    <string name="hint_name_pet">Enter Pet Name</string>

    <string name="warning_pet_name_blank">Pet name is blank!</string>
    <string name="warning_select_a_pet">Please select a pet!</string>

    <string name="label_pet_profile">Pet\'s Profile</string>
    <string name="label_name_detail_pet">Hi, I am </string>

    <string name="label_feed_me">Feed me</string>
    <string name="label_health_cond">My health condition</string>

    <string name="label_breakfast">Breakfast</string>
    <string name="label_lunch">Lunch</string>
    <string name="label_dinner">Dinner</string>
    <string name="label_snack">Snack</string>

    <string name="label_next">Next</string>
    <string name="label_finish">Finish</string>
    <string name="label_add_to_plate">Add to plate</string>

    <string name="action_settings">Settings</string>
    <string name="label_update_profile">Update your profile</string>
    <string name="label_change_pet">Change your pet</string>

    <string name="warning_required_field_blank">Required field is blank!</string>
    <string name="warning_dob_format_incorrect">Date of birth format is incorrect!</string>
    <string name="warning_height_type_incorrect">Entered height is not a number!</string>
    <string name="warning_weight_type_incorrect">Entered weight is not a number!</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="content_description_loading">Loading</string>

    <string name="content_description_pet_selected">Selected pet thumbnail</string>
    <string name="content_description_sheep">Sheep</string>
    <string name="content_description_turtle">Turtle</string>
    <string name="content_description_zibra">Zibra</string>
    <string name="content_description_yourpet">Image of your pet</string>

    <string name="content_description_user_name">User name thumbnail</string>
    <string name="content_description_dob">Date of birth thumbnail</string>
    <string name="content_description_height">Height thumbnail</string>
    <string name="content_description_weight">Weight thumbnail</string>

    <string name="content_description_breakfast">Breakfast thumbnail</string>
    <string name="content_description_lunch">Lunch thumbnail</string>
    <string name="content_description_dinner">Dinner thumbnail</string>
    <string name="content_description_snack">Snack thumbnail</string>

    <string name="content_description_food">Food thumbnail</string>

    <string name="content_description_widget">Pet widget thumbnail</string>

    <string name="main_notification_channel_name">Primary</string>
    <string name="reminder_notification_title">Where\'s the food?</string>
    <string name="reminder_notification_body">Time to eat something!</string>

</resources>