<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_choose_pet"
            style="@style/ToolbarText"
            />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/ll_margin_small"
            android:layout_marginLeft="@dimen/ll_margin_small"
            android:layout_marginRight="@dimen/ll_margin_small"
            >

            <ImageView
                android:id="@+id/iv_pet"
                android:layout_width="@dimen/iv_large_icon"
                android:layout_height="@dimen/iv_large_icon"
                android:layout_marginRight="@dimen/iv_margin_small"
                android:layout_marginTop="@dimen/iv_margin_small"
                tools:src="@drawable/ic_launcher_background"
                />

            <EditText
                android:id="@+id/et_petname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name_pet"
                android:layout_marginTop="@dimen/iv_margin_small"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_pet1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/iv_margin_small"
            android:layout_marginLeft="@dimen/iv_margin_small"
            android:layout_gravity="center"
            tools:src="@drawable/ic_launcher_foreground"
            />

        <ImageView
            android:id="@+id/iv_pet2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/iv_margin_small"
            android:layout_marginLeft="@dimen/iv_margin_small"
            android:layout_gravity="center"
            tools:src="@drawable/ic_launcher_foreground"
            />

        <ImageView
            android:id="@+id/iv_pet3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/iv_margin_small"
            android:layout_marginLeft="@dimen/iv_margin_small"
            android:layout_gravity="center"
            tools:src="@drawable/ic_launcher_foreground"
            />

    </LinearLayout>

    <Button
        android:id="@+id/bt_choose_pet_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bt_margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/label_next"
        />

</android.support.constraint.ConstraintLayout>