<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:title="@string/label_udpate_my_profile"
        app:titleTextAppearance="@style/ToolbarText"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/ll_margin_small"
            android:layout_marginLeft="@dimen/ll_margin_small"
            android:layout_marginStart="@dimen/ll_margin_small"
            android:layout_marginRight="@dimen/ll_margin_small"
            android:layout_marginEnd="@dimen/ll_margin_small"
            >

            <ImageView
                android:id="@+id/iv_user_name"
                android:layout_width="@dimen/iv_large_icon"
                android:layout_height="@dimen/iv_large_icon"
                android:layout_marginTop="@dimen/iv_margin_small"
                android:layout_marginRight="@dimen/iv_margin_small"
                android:layout_marginEnd="@dimen/iv_margin_small"
                tools:src="@drawable/ic_launcher_background"
                />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/iv_margin_small"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/ll_margin_small"
            android:layout_marginLeft="@dimen/ll_margin_small"
            android:layout_marginStart="@dimen/ll_margin_small"
            android:layout_marginRight="@dimen/ll_margin_small"
            android:layout_marginEnd="@dimen/ll_margin_small"
            >

            <ImageView
                android:id="@+id/iv_dob"
                android:layout_width="@dimen/iv_large_icon"
                android:layout_height="@dimen/iv_large_icon"
                android:layout_marginTop="@dimen/iv_margin_small"
                android:layout_marginRight="@dimen/iv_margin_small"
                android:layout_marginEnd="@dimen/iv_margin_small"
                tools:src="@drawable/ic_launcher_background"
                />

            <EditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/iv_margin_small"
                android:maxLength="10"
                android:singleLine="true"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/ll_margin_small"
            android:layout_marginLeft="@dimen/ll_margin_small"
            android:layout_marginStart="@dimen/ll_margin_small"
            android:layout_marginRight="@dimen/ll_margin_small"
            android:layout_marginEnd="@dimen/ll_margin_small"
            >

            <ImageView
                android:id="@+id/iv_height"
                android:layout_width="@dimen/iv_large_icon"
                android:layout_height="@dimen/iv_large_icon"
                android:layout_marginTop="@dimen/iv_margin_small"
                android:layout_marginRight="@dimen/iv_margin_small"
                android:layout_marginEnd="@dimen/iv_margin_small"
                tools:src="@drawable/ic_launcher_background"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/iv_margin_small"
                    android:maxLength="4"
                    android:singleLine="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_height_unit"
                    />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/ll_margin_small"
            android:layout_marginLeft="@dimen/ll_margin_small"
            android:layout_marginStart="@dimen/ll_margin_small"
            android:layout_marginRight="@dimen/ll_margin_small"
            android:layout_marginEnd="@dimen/ll_margin_small"
            >

            <ImageView
                android:id="@+id/iv_weight"
                android:layout_width="@dimen/iv_large_icon"
                android:layout_height="@dimen/iv_large_icon"
                android:layout_marginTop="@dimen/iv_margin_small"
                android:layout_marginRight="@dimen/iv_margin_small"
                android:layout_marginEnd="@dimen/iv_margin_small"
                tools:src="@drawable/ic_launcher_background"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/iv_margin_small"
                    android:maxLength="4"
                    android:singleLine="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_weight_unit"
                    />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_my_profile_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bt_margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_finish"
        />

</android.support.constraint.ConstraintLayout>